Add more projects

--- a/apps/next/src/i18n/locales/ar/projects.json
+++ b/apps/next/src/i18n/locales/ar/projects.json
@@ -94,5 +94,39 @@
       "2": "إحدى وظائف الموقع الرئيسية هي تكامله مع موقع webook.com، وهو منصة موثوقة لحجز التذاكر بشكل مريح وآمن. أثناء استكشاف الزوار لمجموعة الفعاليات والأنشطة المقدمة، يبسط الرابط المباشر إلى webook.com عملية حجز التذاكر، مما يسمح للمستخدمين بضمان مقاعدهم في العروض والتجارب الأكثر رغبة بسهولة."
     },
     "technologies": "React,Next.js,Contentful,CF Pages,TailwindCSS"
+  },
+  "webook": {
+    "title": "webook.com",
+    "subtitle": "Elevating Event Experiences in Saudi Arabia",
+    "description": {
+      "1": "يبرز webook.com كحلا للحلول الشاملة، حيث يخدم مجموعة متنوعة من الفعاليات والأنشطة. سواء كنت تخطط لحضور حفلات موسيقية، أو مهرجانات، أو فعاليات رياضية، أو تجمعات ثقافية، يوفر webook.com وجهة واحدة لجميع احتياجات الحجز الخاصة بك. واجهة المستخدم السهلة تضمن تجربة سلسة وخالية من المتاعب، مما يجعلها الخيار المفضل للحاضرين في جميع أنحاء المملكة العربية السعودية.",
+      "2": "اختار موسم الرياض 2023/24 webook.com كنظام رسمي للحجز، وهو دليل على موثوقية وكفاءة المنصة. تعزز هذه الشراكة ليس فقط موقف webook.com كرائدة في الصناعة، ولكن أيضًا تعرض قدرتها على التعامل مع الفعاليات على نطاق واسع بدقة واحتراف.",
+      "3": "يتجاوز webook.com التقليدية في المجالات العديدة من منصات الحجز عن طريق دمج التكنولوجيا المتقدمة في نظامها. تتميز المنصة بمحرك بحث وتصفية قوي، يتيح للمستخدمين التنقل بسهولة من خلال مجموعة من الفعاليات والعثور على تلك التي تتناسب مع اهتماماتهم. بالإضافة إلى ذلك، يأخذ نظام التوصيات القائم على الذكاء الاصطناعي تجربة المستخدم إلى مستوى آخر من خلال تقديم أنشطة استنادًا إلى تفضيلات كل فرد، مما يخلق رحلة حجز شخصية وممتعة."
+    },
+    "technologies": "React,Next.js,Contentful,TailwindCSS"
+  },
+  "react-scheduler": {
+    "title": "تقويم مفتوح المصدر لرياكت",
+    "subtitle": "مكتبة تقويم مفتوحة المصدر لرياكت معتمدة على Marerial UI",
+    "description": {
+      "1": "مكون جدول زمني مبسط لرياكت، سهل الاستخدام والتخصيص، أخف وأبسط من مكتبات جداول زمنية رياكت الأخرى المتاحة. قمت بإنشاء هذا لأحد مشاريعي التي استخدمت فيها نظام تقويم/فعالية، فقد قمت بمراجعة بعض أشهر المكونات المتاحة واعتقدت أنها لا تتناسب مع استخدامي، وكنت بحاجة إلى تنفيذات خاصة تتناسب بشكل أكثر تمامًا مع المشروع الحالي."
+    },
+    "technologies": "Javascript,Typescript,React"
+  },
+  "easy-webpush": {
+    "title": "رسائل اشعارات لمتجر أوبن كارت",
+    "subtitle": "",
+    "description": {
+      "1": "نظام اشعارات لمتجر أوبن كارت مستضاف ذاتياً لدى المتجر بدون اشتراكات خارجية"
+    },
+    "technologies": "Javascript,Push Notifications,PWA,PHP,OpenCart,MySQL"
+  },
+  "european-honey": {
+    "title": "متجر العسل الأوروبي",
+    "subtitle": "",
+    "description": {
+      "1": "أراد محبو عسل أوروبا شيئًا خاصًا، فريدًا يناسب احتياجاتهم، وهذا المتجر الإلكتروني الذي يحمل وقت تحميل قصير يبلغ حوالي 2 ثانية مليء بالميزات قد تم تصميمه خصيصًا لمساعدتهم في نجاح إطلاق منتجاتهم، بما في ذلك نظام التصنيف المعقد (الفئات، الفلاتر، الوسوم، العلامات التجارية، السمات، الميزات)، خيارات مرنة للغاية مع جميع التعديلات اللازمة (مدخلات، اختيارات، ملفات، أرقام، نصوص.. كل منها لديه تفاصيل فرعية خاصة به، وظروف رؤية، وظروف تسعير، وتسعير ديناميكي، تتبع الكميات)، أسعار مجمعة بناءً على المجموعات (بيع بالتجزئة، بيع بالجملة وما إلى ذلك)، عروض، كوبونات، نقاط، إشعارات، إدارة، تتبع الطلبات، جدولة، شحن، بوابة الدفع، والكثير من الميزات الأخرى. ولا ننسى جوانب العملية البحثية (SEO)، مع مقاطع متنوعة من نوع JSON الغنية، مع القليل من العمل التسويقي، سيكونوا نجومًا، نأمل أن يحققوا ذلك."
+    },
+    "technologies": "Fullstack,E-commerce,Node,MySQL,Redis,VPS,Nextjs"
   }
 }
